--- a/.github/workflows/aib_workflow_mdi.yml
+++ b/.github/workflows/aib_workflow_mdi.yml
@@ -18,7 +18,7 @@ jobs:
     name: define parameters and create Azure Image Builder template
     runs-on: ubuntu-latest
     env: 
-      aib_template_name: "ubuntuserver_mdi"
+      aib_template_name: "ubuntuignite01"
       aib_resource_group: "iblinuxgalleryRG"
         
     steps:
@@ -34,7 +34,7 @@ jobs:
           inlineScript: |
             curl https://raw.githubusercontent.com/lnochili/azvmimagebuilder/master/armTemplates/azplatform_image_deploy_mdi.json > ./template_mdi.json
             curl https://raw.githubusercontent.com/lnochili/azvmimagebuilder/master/armTemplates/azplatform_image_params_mdi.json > ./params_mdi.json
-            az deployment group create --resource-group ${{ env.aib_resource_group }} --template-file ./template_mdi.json --parameters @./parameters_mdi.json --name ${{ env.aib_template_name }}
+            az deployment group create --resource-group ${{ env.aib_resource_group }} --template-file ./template_mdi.json --parameters @./params_mdi.json --name ${{ env.aib_template_name }}
             az image builder run --resource-group ${{ env.aib_resource_group }}  --name ${{ env.aib_template_name }} 
   
             
